Imdb sort added.

--- a/MovieAppTask/index.html
+++ b/MovieAppTask/index.html
@@ -25,7 +25,12 @@
                         <a class="nav-link active" aria-current="page" href="#">Contact</a>
                     </li>                  
                 </ul>
-                <select id="genre-select-id" style="width: 200px;" class="form-select" aria-label="Default select example">
+                <select id="imdb-select-id" style="width: 200px; margin-right: 5px;" class="form-select" aria-label="Default select example">
+                    <option value="" selected>Imdb</option>
+                    <option value="low-to-high">Low to High</option>
+                    <option value="high-to-low">High to Low</option>
+                  </select>
+                <select id="genre-select-id" style="width: 200px; margin-right: 5px;" class="form-select" aria-label="Default select example">
                     <option value="" selected>Genres</option>
                   </select>
                 <form id="search-form-id" class="d-flex" role="search">
